--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2024"
 [dependencies]
 dashmap = "5"
 num_cpus = "1"
-
-[dev-dependencies]
+serde = { version = "1", features = ["derive"] }
+toml = "0.8"
