--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,6 @@ dashmap = "5"
 num_cpus = "1"
 serde = { version = "1", features = ["derive"] }
 toml = "0.8"
+
+[profile.release]
+overflow-checks = true
