--- a/.github/workflows/011_release.yml
+++ b/.github/workflows/011_release.yml
@@ -1,12 +1,15 @@
-name: Manual Release Build
+name: Build Release Binaries
 
 on:
   workflow_dispatch:
     inputs:
-      release_tag:
-        description: "Release tag (example: v1.0.0)"
+      tag:
+        description: "Release tag (e.g., v1.2.3)"
         required: true
-        type: string
+      dry_run:
+        description: "Build but do not upload artifacts"
+        required: false
+        default: "false"
 
 permissions:
   contents: write
@@ -20,7 +23,6 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # Linux
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             artifact_name: dnscache-linux-x86_64
@@ -29,7 +31,6 @@ jobs:
             target: aarch64-unknown-linux-gnu
             artifact_name: dnscache-linux-aarch64
 
-          # macOS
           - os: macos-latest
             target: x86_64-apple-darwin
             artifact_name: dnscache-macos-x86_64
@@ -38,63 +39,62 @@ jobs:
             target: aarch64-apple-darwin
             artifact_name: dnscache-macos-aarch64
 
-          # Windows
           - os: windows-latest
             target: x86_64-pc-windows-msvc
             artifact_name: dnscache-windows-x86_64.exe
 
     steps:
+      - name: Harden the runner
+        uses: step-security/harden-runner@ec9f2d5744a09debf3a187a3f4f675c53b671911
+        with:
+          egress-policy: audit
+
       - name: Checkout tag
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.release_tag }}
+          ref: ${{ github.event.inputs.tag }}
 
-      - name: Install Rust
+      - name: Validate tag format
+        run: |
+          TAG="${{ github.event.inputs.tag }}"
+          if ! [[ "$TAG" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "Invalid tag format. Must be vMAJOR.MINOR.PATCH"
+            exit 1
+          fi
+
+      - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
         with:
           targets: ${{ matrix.target }}
 
-      - name: Install cross tools (Linux ARM)
+      - name: Install cross compiler (Linux ARM)
         if: matrix.target == 'aarch64-unknown-linux-gnu'
         run: |
           sudo apt update
           sudo apt install -y gcc-aarch64-linux-gnu
 
-      - name: Build release
+      - name: Build
         run: cargo build --release --target ${{ matrix.target }}
 
-      - name: Strip binary (Linux/macOS)
+      - name: Strip binary (non-Windows)
         if: runner.os != 'Windows'
-        run: |
-          strip target/${{ matrix.target }}/release/dnscache || true
+        run: strip target/${{ matrix.target }}/release/dnscache || true
 
-      - name: Package binary
+      - name: Prepare artifact
         shell: bash
         run: |
           mkdir dist
           cp target/${{ matrix.target }}/release/dnscache* dist/${{ matrix.artifact_name }}
 
-      - name: Upload artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: ${{ matrix.artifact_name }}
-          path: dist/${{ matrix.artifact_name }}
-
-  release:
-    name: Create GitHub Release
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: dist
-
-      - name: Create Release
+      - name: Upload to release
+        if: ${{ github.event.inputs.dry_run != 'true' }}
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.event.inputs.release_tag }}
-          files: dist/**/*
+          tag_name: ${{ github.event.inputs.tag }}
+          files: dist/${{ matrix.artifact_name }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Dry run notice
+        if: ${{ github.event.inputs.dry_run == 'true' }}
+        run: echo "[DRY RUN] Build completed but artifacts not uploaded."
