--- a/systemd/dnscache.service
+++ b/systemd/dnscache.service
@@ -1,13 +1,32 @@
 [Unit]
-Description=Rust DNS Cache
-After=network.target
+Description=dnscache (Rust DNS Cache)
+After=network-online.target
+Wants=network-online.target
 
 [Service]
+Type=simple
 ExecStart=/usr/local/bin/dnscache
-Restart=always
-User=root
+
+User=dnscache
+Group=dnscache
+
 AmbientCapabilities=CAP_NET_BIND_SERVICE
+CapabilityBoundingSet=CAP_NET_BIND_SERVICE
 NoNewPrivileges=true
+
+Restart=always
+RestartSec=2
+
+EnvironmentFile=/etc/dnscache/dnscache.env
+
+PrivateTmp=true
+ProtectSystem=strict
+ProtectHome=true
+ProtectKernelTunables=true
+ProtectControlGroups=true
+ProtectKernelModules=true
+LockPersonality=true
+MemoryDenyWriteExecute=true
 
 [Install]
 WantedBy=multi-user.target
