--- a/.github/workflows/011_release.yml
+++ b/.github/workflows/011_release.yml
@@ -16,35 +16,41 @@ permissions:
 
 jobs:
   build:
-    name: Build (${{ matrix.target }})
+    name: Build (${{ matrix.name }})
     runs-on: ${{ matrix.os }}
 
     strategy:
       fail-fast: false
       matrix:
         include:
-          - os: ubuntu-latest
+          - name: linux-x86_64
+            os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            artifact_name: dnscache-linux-x86_64
+            zip: dnscache-linux-x86_64.zip
 
-          - os: ubuntu-latest
+          - name: linux-aarch64
+            os: ubuntu-latest
             target: aarch64-unknown-linux-gnu
-            artifact_name: dnscache-linux-aarch64
+            zip: dnscache-linux-aarch64.zip
+            cross: true
 
-          - os: macos-latest
+          - name: macos-x86_64
+            os: macos-latest
             target: x86_64-apple-darwin
-            artifact_name: dnscache-macos-x86_64
+            zip: dnscache-macos-x86_64.zip
 
-          - os: macos-latest
+          - name: macos-aarch64
+            os: macos-latest
             target: aarch64-apple-darwin
-            artifact_name: dnscache-macos-aarch64
+            zip: dnscache-macos-aarch64.zip
 
-          - os: windows-latest
+          - name: windows-x86_64
+            os: windows-latest
             target: x86_64-pc-windows-msvc
-            artifact_name: dnscache-windows-x86_64.exe
+            zip: dnscache-windows-x86_64.zip
 
     steps:
-      - name: Harden the runner
+      - name: Harden runner
         uses: step-security/harden-runner@ec9f2d5744a09debf3a187a3f4f675c53b671911
         with:
           egress-policy: audit
@@ -55,10 +61,11 @@ jobs:
           ref: ${{ github.event.inputs.tag }}
 
       - name: Validate tag format
+        shell: bash
         run: |
           TAG="${{ github.event.inputs.tag }}"
           if ! [[ "$TAG" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
-            echo "Invalid tag format. Must be vMAJOR.MINOR.PATCH"
+            echo "Invalid tag format"
             exit 1
           fi
 
@@ -67,31 +74,48 @@ jobs:
         with:
           targets: ${{ matrix.target }}
 
-      - name: Install cross compiler (Linux ARM)
-        if: matrix.target == 'aarch64-unknown-linux-gnu'
-        run: |
-          sudo apt update
-          sudo apt install -y gcc-aarch64-linux-gnu
+      # Install cross for Linux ARM
+      - name: Install cross
+        if: matrix.cross == true
+        run: cargo install cross
 
-      - name: Build
+      - name: Build (native)
+        if: matrix.cross != true
         run: cargo build --release --target ${{ matrix.target }}
 
-      - name: Strip binary (non-Windows)
-        if: runner.os != 'Windows'
-        run: strip target/${{ matrix.target }}/release/dnscache || true
+      - name: Build (cross)
+        if: matrix.cross == true
+        run: cross build --release --target ${{ matrix.target }}
 
-      - name: Prepare artifact
+      - name: Prepare release bundle
         shell: bash
         run: |
-          mkdir dist
-          cp target/${{ matrix.target }}/release/dnscache* dist/${{ matrix.artifact_name }}
+          mkdir bundle
+          
+          # Binary path
+          BIN="target/${{ matrix.target }}/release/dnscache"
+          
+          if [[ "${{ runner.os }}" == "Windows" ]]; then
+            BIN="target/${{ matrix.target }}/release/dnscache.exe"
+          fi
+
+          cp "$BIN" bundle/
+          cp dnscache.toml bundle/
+
+          if [[ "${{ runner.os }}" == "Linux" ]]; then
+            cp -r systemd bundle/
+          fi
+
+          cd bundle
+          zip -r ../${{ matrix.zip }} .
+          cd ..
 
       - name: Upload to release
         if: ${{ github.event.inputs.dry_run != 'true' }}
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.event.inputs.tag }}
-          files: dist/${{ matrix.artifact_name }}
+          files: ${{ matrix.zip }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
