Improved fuzzing tests and added initiat dns poisoning tests which covers old poisoning techniques and from all this improved dnscache resiliance

--- a/fuzz/Cargo.toml
+++ b/fuzz/Cargo.toml
@@ -33,3 +33,17 @@ path = "fuzz_targets/fuzz_cache_key.rs"
 test = false
 doc = false
 bench = false
+
+[[bin]]
+name = "fuzz_process_query"
+path = "fuzz_targets/fuzz_process_query.rs"
+test = false
+doc = false
+bench = false
+
+[[bin]]
+name = "fuzz_skip_name"
+path = "fuzz_targets/fuzz_skip_name.rs"
+test = false
+doc = false
+bench = false
